--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,53 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.box{
+  margin: auto;
+  margin-top:15ch;
+  width: 300px;
+  height: 300px;
+  padding: 10px;
+  border: 1px solid gray;
+  box-shadow:5px 6px 8px #a862e1;
+}
+.box h1{
+  background-color: #a862e1;;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  margin: auto;
+  padding:2px;
+}
+.input-row {
+  display: flex;
+  align-items: center;
+}
+.Additem{
+  border: none;
+  border-bottom: 2px solid #a862e1; 
+  outline:none; 
+  padding-bottom: 5px;
+  margin-left:4ch;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size:smaller;
+  font-weight: 400;
+}
+.btn{
+  margin-left:4ch;
+  color: #a862e1;
+  font-weight:700;
+  height: max-content;
+  width: max-content;
+  font-size: larger;
+  border-radius: 30px #a862e1;
+}
+.btn:hover{
+  background-color: #a862e1;
+  color: aliceblue;
+  border:none;
+}
+
+
